syntax = "proto3";

package cheers.chat.v1;

import "google/protobuf/timestamp.proto";
import "cheers/type/user/user.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/party/v1;party";


service ChatService {
  rpc GetRooms(Empty) returns (stream Room) {}
  rpc GetRoomId(GetRoomIdReq) returns (RoomId) {}
  rpc CreateChat(CreateChatReq) returns (Room) {}
  rpc JoinRoom(RoomId) returns (stream Message) {}
  rpc GetRoomMembers(RoomId) returns (Users) {}
  rpc LeaveRoom(RoomId) returns (Empty) {}
  rpc DeleteRoom(RoomId) returns (Empty) {}

  rpc SendMessage(stream Message) returns (MessageAck) {}
  rpc LikeMessage(LikeMessageReq) returns (Empty) {}
  rpc UnlikeMessage(LikeMessageReq) returns (Empty) {}

  rpc TypingStart(TypingReq) returns (Empty) {}
  rpc TypingEnd(TypingReq) returns (Empty) {}

  rpc AddToken(AddTokenReq) returns (Empty) {}
  rpc DeleteUser(UserIdReq) returns (Empty) {}
}

message UserCard {
  string id = 1;
  string name = 2;
  string username = 3;
  bool verified = 4;
  string avatar = 5;
}

message Users {
  repeated UserCard users = 1;
}

message UserIdReq {
  string userId = 1;
}

message Empty {
}

message AddTokenReq {
  string token = 1;
}

message CreateChatReq {
  repeated string user_ids = 1;
  string group_name = 2;
}

message TypingReq {
  string room_id = 1;
  string username = 2;
  string avatar_url = 3;
}

message RoomId {
  string room_id = 1;
}

message GetRoomIdReq {
  string recipient_id = 1;
}

enum RoomStatus {
  EMPTY = 0;
  OPENED = 1;
  SENT = 2;
  RECEIVED = 3;
  NEW = 4;
}

enum RoomType {
  DIRECT = 0;
  GROUP = 1;
}

message Room {
  string id = 1;
  string name = 2;
  bool verified = 4;
  bool typing = 3;
  string owner = 5;
  RoomType type = 6;
  RoomStatus status = 8;
  repeated string admins = 9;
  repeated string members = 10;
  string last_message_text = 11;
  string picture = 12;
  MessageType last_message_type = 13;
  google.protobuf.Timestamp created = 14;
  google.protobuf.Timestamp last_message_time = 15;
}

enum MessageType {
  TEXT = 0;
  IMAGE = 1;
  VIDEO = 2;
}

message LikeMessageReq {
  string room_id = 1;
  string message_id = 2;
}

message Message {
  string id = 1;
  string sender = 2;
  Room room = 3;
  string message = 4;
  string senderpicture = 5;
  string senderName = 6;
  string senderUsername = 7;
  google.protobuf.Timestamp created = 8;
  string photo_url = 9;
  MessageType type = 10;
  int32 like_count = 11;
}

message MessageAck {
  string status = 1;
}